# JpegCompress

app/: build.gradle
app/src/androidTest/java/com/tbright/jpegcompress/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: compress-jpeg.cpp
app/src/main/java/com/tbright/jpegcompress/: BitmapCompressUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/tbright/jpegcompress/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
